--- a/20190408_T1/CSS.css
+++ b/20190408_T1/CSS.css
@@ -1,11 +1,29 @@
 
 body {
-    background-image: url("256x256tileset.png");
-    opacity: 500;
+    background-image: url("256x256tileset.png");    
+}
+
+h6 {
+    margin: 0px;
+    font-size: 100px;
+    
 }
 
 .header {
     border: 3px solid green;
     height: 200px;
+    
+}
 
+.interesting {
+    border: 3px solid green;
+    height: 200px;
+}
+
+.intrest {
+    height: 100px;
+    width: 100px;
+    border: 4px solid black;
+    float: left;
+    margin: 10px;
 }
