--- a/20190408_T1/CSS.css
+++ b/20190408_T1/CSS.css
@@ -3,6 +3,10 @@ body {
     background-image: url("256x256tileset.png");    
 }
 
+h1 {
+    margin: 0px;
+}
+
 h6 {
     margin: 0px;
     font-size: 100px;
